objects/Account_Master__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Masters</relationshipLabel>
        <relationshipName>Account_Masters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Finance_ID__c</fullName>
        <label>Finance ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Index__c</fullName>
        <label>Finance Index</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_DUNS_Number__c</fullName>
        <label>Global Ultimate DUNS Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPS_Index__c</fullName>
        <label>OPS Index</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPS_Name__c</fullName>
        <label>OPS Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Account Master</label>
    <nameField>
        <label>Account Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Masters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>